fixed label text alignment

--- a/client/css/widgets/label.css
+++ b/client/css/widgets/label.css
@@ -1,6 +1,7 @@
 .label {
   font-size: 16px;
   color: #6d6d6d;
+  text-align: center;
 }
 
 .label input {
@@ -9,7 +10,7 @@
   padding: 0;
   margin: 0;
   color: inherit;
-  text-align: center;
+  text-align: inherit;
   font-size: inherit;
   width: 100%;
   height: 100%;
